function(log_unittest case)
  ob_unittest(${ARGV})
  target_link_libraries(${case} PRIVATE mockcontainer)
endfunction()

log_unittest(test_log_checksum)
log_unittest(test_log_entry_and_group_entry)
log_unittest(test_lsn)
log_unittest(test_log_meta_entry_header)
log_unittest(test_log_meta_info)
log_unittest(test_log_meta_entry)
log_unittest(test_log_meta)
# log_unittest(test_palf_handle_impl)
ob_unittest(test_log_state_mgr)
ob_unittest(test_log_reconfirm)
ob_unittest(test_log_sliding_window)
# ob_unittest(test_log_submit_log)
ob_unittest(test_log_group_buffer)
ob_unittest(test_lsn_allocator)
ob_unittest(test_fixed_sliding_window)
# ob_unittest(test_palf_env)
# ob_unittest(test_log_apply_engine)
ob_unittest(test_ob_election)
ob_unittest(test_ob_election_with_priority)
ob_unittest(test_ob_election_message_compat)
ob_unittest(test_ob_election_priority_seperate_blacklist)
ob_unittest(test_ob_election_message_compat2)
# ob_unittest(palf_performance_unittest)
ob_unittest(test_ls_election_reference_info)
ob_unittest(test_ob_tuple)
#ob_unittest(test_ob_role_change_service)
ob_unittest(test_log_config_mgr)
ob_unittest(test_clear_up_tmp_files)
ob_unittest(test_log_dir_match)
ob_unittest(test_server_log_block_mgr)
ob_unittest(test_tablet_replay_executor)
log_unittest(test_role_change_handler)
log_unittest(test_log_mode_mgr)
ob_unittest(test_palf_throttling)
ob_unittest(test_net_standby_restore_source)
ob_unittest(test_log_external_storage_handler)
ob_unittest(test_log_external_storage_io_task)
if(OB_BUILD_CLOSE_MODULES)
  ob_unittest(test_arb_gc_utils)
  ob_unittest(test_ob_arbitration_service)
  ob_unittest(test_palf_env_lite_mgr)
endif()
