add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
link_directories(${DEP_DIR}/lib/mariadb)
function(libobcdc_unittest case)
  ob_unittest(${ARGV})
  target_link_libraries(${case} PRIVATE obcdc)
  disable_pch(${case})
  target_include_directories(${case}
    PRIVATE ${PROJECT_SOURCE_DIR}/tools ${CMAKE_SOURCE_DIR}/unittest ${CMAKE_SOURCE_DIR}/deps/oblib/unittest ${DEP_DIR}/include)
endfunction()

libobcdc_unittest(test_log_part_mgr)
libobcdc_unittest(test_log_task_pool)
libobcdc_unittest(test_small_arena)
libobcdc_unittest(test_log_config)
libobcdc_unittest(test_log_fake_common_config)
libobcdc_unittest(test_log_table_matcher)
libobcdc_unittest(test_ob_map_queue)
libobcdc_unittest(test_ob_map_queue_thread)
libobcdc_unittest(test_ob_log_timer)
libobcdc_unittest(test_ob_log_dlist)
libobcdc_unittest(test_ob_log_part_svr_list)
libobcdc_unittest(test_ob_log_all_svr_cache)
libobcdc_unittest(test_ob_log_start_log_id_locator)
libobcdc_unittest(test_ob_log_heartbeater)
libobcdc_unittest(test_log_utils)
libobcdc_unittest(test_ob_log_adapt_string)
libobcdc_unittest(test_ob_concurrent_seq_queue)
libobcdc_unittest(test_ob_seq_thread)
libobcdc_unittest(test_ob_log_part_trans_resolver_new)
libobcdc_unittest(test_log_svr_blacklist)
