#ob_unittest(test_manage_tenant omt/test_manage_tenant.cpp)
storage_unittest(test_hfilter_parser table/test_hfilter_parser.cpp)
storage_unittest(test_query_response_time mysql/test_query_response_time.cpp)
storage_unittest(test_create_executor table/test_create_executor.cpp)
storage_unittest(test_table_aggregation table/test_table_aggregation.cpp)
storage_unittest(test_table_sess_pool table/test_table_sess_pool.cpp)
storage_unittest(test_ttl_util table/test_ttl_util.cpp)
storage_unittest(test_ingress_bw_alloc_manager net/test_ingress_bw_alloc_manager.cpp)
storage_unittest(test_rpc_reverse_keepalive net/test_rpc_reverse_keepalive.cpp)
ob_unittest(test_obkv_config tableapi/test_obkv_config.cpp)
ob_unittest(test_uniq_task_queue)
ob_unittest(test_table_connection tableapi/test_table_connection.cpp)
ob_unittest(test_check_os_params test_check_os_params.cpp)

add_subdirectory(rpc EXCLUDE_FROM_ALL)
